# ancora

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/web/: .env.example  README.md  drizzle.config.ts  next.config.ts  package.json  tsconfig.json
config/: README.md
docker/: README.md  docker-compose.yml  postgres.env.example
docs/adr/: 0001-use-monorepo.md  0002-fastapi-owns-v1-product-and-ai-api.md  0003-auth-and-account-are-v1-scope.md  0004-use-openai-as-default-llm-provider.md  0005-use-postgresql-pgvector-for-v1.md  0006-defer-standalone-node-api-kubernetes-terraform.md  0007-place-eval-runner-under-services.md  0008-use-nextjs-for-v1-client-ui.md  0009-nextjs-typescript-owns-v1-product-and-ai-runtime.md  0010-defer-python-runtime-to-later-research-and-tooling.md
docs/agents/: README.md  repo-manifest.yaml
docs/architecture/: diagrams.md  system-overview.md
docs/engineering/: documentation-governance.md  git-conventions.md  monorepo-conventions.md  tradeoffs.md
docs/evals/: eval-strategy.md
docs/exec-plans/: README.md
docs/frontend/: nextjs-feature-first-convention.md  nextjs-naming-convention.md
docs/implementation/: ancora-project-plan-v0.2.md
docs/ops/: cost-model.md  deployment.md  failure-cases.md  monitoring.md  solo-dev-guardrails.md
docs/product/: business-problem.md
docs/roadmap/: next-improvements.md
docs/testing/: change-based-test-coverage-policy.md  testing-strategy.md
evals/: README.md
infra/observability/: README.md
prompts/: README.md
services/ai-runtime/: .env.example  README.md  pyproject.toml
services/ai-runtime/src/ancora_ai_runtime/: __init__.py  main.py
services/ai-runtime/tests/: test_health.py
services/workers/: .env.example  README.md  pyproject.toml
services/workers/src/ancora_workers/: __init__.py  runner.py
services/workers/tests/: test_runner.py
tools/eval-runner/: .env.example  README.md  package.json  pyproject.toml
tools/eval-runner/src/: cli.ts  smoke.ts
tools/eval-runner/src/ancora_eval_runner/: __init__.py  cli.py
tools/eval-runner/tests/: smoke.test.mjs  test_cli.py
(+57 files in other folders)
