[project]
name = "ancora-workers"
version = "0.1.0"
description = "Placeholder Python worker boundary for Ancora."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ancora-worker = "ancora_workers.runner:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9",
  "ruff>=0.8.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ancora_workers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
