[project]
name = "ancora-eval-runner"
version = "0.1.0"
description = "Internal eval CLI boundary for Ancora."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
ancora-eval-runner = "ancora_eval_runner.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9",
  "ruff>=0.8.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ancora_eval_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
